# scoreboarding

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  charter.md  logo-prompt.md
examples/: classic.txt  run_classic.sh
src/scoreboarding/: __init__.py  cli.py  engine.py  model.py  render.py
tests/: test_cli.py  test_engine.py  test_render.py
